Ensure all of the entry UI is focus-visible
Now, with more noticeable :focus styling, I'd like to ensure that the
borders of all containers are visible and not hidden behind parent
containers.

Not acceptable:

    |--------------------
    |
    |  not acceptable
    |
    |

Acceptable:

    |-------------------|
    |                   |
    |  acceptable ^_^;  |
    |                   |
    |-------------------|

Bonus: The entry UI is looking all-in-all much more professional now.

--- a/editor/stylesheets/entries/entry-controls-transitions.scss
+++ b/editor/stylesheets/entries/entry-controls-transitions.scss
@@ -10,6 +10,7 @@
   &.enter-active,
   &.enter-done {
     transform: translateY(0);
+    bottom: 0.25em;
   }
 
   &.exit {
