--- a/editor/stylesheets/entries/entry-controls.scss
+++ b/editor/stylesheets/entries/entry-controls.scss
@@ -3,13 +3,16 @@
 .entry .controls {
   display: grid;
   grid-template-columns: repeat(3, 1fr);
+  column-gap: 0.15em;
   position: absolute;
   bottom: 0;
-  right: 0;
+  right: 0.15em;
   height: 3em;
   width: 300px;
 
   @media (max-width: 420px) {
+    background-color: var(--bg-primary);
+    right: 0;
     width: 100%;
   }
 }
@@ -17,7 +20,7 @@
 .entry .controls .control {
   grid-row: 1/3;
   border: var(--border-box-style);
-  border-width: 1px 0 0 0;
+  border-width: 1px;
   cursor: pointer;
   line-height: 4em;
   font-size: 0.75em;
@@ -26,14 +29,13 @@
   text-decoration: none;
   text-transform: lowercase;
 
-  @media (min-width: 421px) {
+  @media (max-width: 420px) {
     &:first-child {
-      border-width: 1px 0 0 1px;
+      margin-left: 0.2em;
     }
-  }
-
-  &:nth-child(even) {
-    border-width: 1px 1px 0 1px;
+    &:last-child {
+      margin-right: 0.2em;
+    }
   }
 
   &.edit {
