--- a/editor/stylesheets/entries/entry.scss
+++ b/editor/stylesheets/entries/entry.scss
@@ -3,7 +3,7 @@
 .entries .entry {
   background-color: var(--bg-primary);
   border: var(--border-box-style);
-  border-width: 1px 1px 0 1px;
+  border-width: 1px 1px 1px 1px;
   margin: 0 0.5em;
   padding: 0 0.5em;
   height: 10em;
